<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_coord_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:transitionName="@string/transition_card"
    >

    <com.example.xyzreader.ui.MyAppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            >

            <com.example.xyzreader.ui.DynamicHeightNetworkImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/photo_placeholder"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transition_photo"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/meta_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/detail_inner_horiz_margin"
            android:paddingStart="@dimen/detail_inner_horiz_margin"
            android:paddingRight="@dimen/detail_inner_horiz_margin"
            android:paddingEnd="@dimen/detail_inner_horiz_margin"
            android:paddingTop="@dimen/detail_metabar_vert_padding"
            android:paddingBottom="@dimen/detail_metabar_vert_padding"
            android:background="?colorPrimary"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            >

            <com.example.xyzreader.ui.MyTextView
                android:id="@+id/article_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                android:textColor="#fff"
                android:textSize="@dimen/detail_title_text_size"
                android:lineSpacingMultiplier="0.9"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:layout_gravity="start"
                android:transitionName="@string/transition_title"
                />

            <include layout="@layout/article_author_date"/>

        </LinearLayout>

    </com.example.xyzreader.ui.MyAppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/nested_scroll"
        android:fitsSystemWindows="true"
        >

        <TextView
            android:id="@+id/article_body"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
            android:layout_marginStart="@dimen/detail_inner_horiz_margin"
            android:layout_marginRight="@dimen/detail_inner_horiz_margin"
            android:layout_marginEnd="@dimen/detail_inner_horiz_margin"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:layout_gravity="start"
            android:paddingTop="@dimen/detail_inner_top_margin"
            android:paddingBottom="@dimen/detail_inner_bottom_margin"
            android:textColorLink="@color/theme_accent"
            android:textSize="@dimen/detail_body_text_size"
            android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
            />

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:src="@drawable/ic_share"
        app:borderWidth="@dimen/fab_borderWidth"
        app:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/action_share"
        />

</android.support.design.widget.CoordinatorLayout>
